Added initial implementation of persistence.

--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,7 @@ plugins {
 
 group 'maia'
 version '1.0-SNAPSHOT'
+
+dependencies {
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1"
+}
